[gd_scene load_steps=4 format=3 uid="uid://drkf7umnxrj4c"]

[ext_resource type="LabelSettings" uid="uid://ba61jrjv4u1in" path="res://Big Font Centered.tres" id="1_8j36e"]
[ext_resource type="Script" uid="uid://gchjecdlw15k" path="res://prog_54a.gd" id="1_8vfb8"]
[ext_resource type="Theme" uid="uid://g8y3r3oufsf5" path="res://Big Font.tres" id="2_uhlh0"]

[node name="prog_54b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8vfb8")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 17.0
offset_right = 433.0
offset_bottom = 89.0
text = "Enter 4 Integers:"
label_settings = ExtResource("1_8j36e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblSum" type="Label" parent="."]
layout_mode = 0
offset_left = 217.0
offset_top = 226.0
offset_right = 451.0
offset_bottom = 298.0
text = "Sum:"
label_settings = ExtResource("1_8j36e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblAvg" type="Label" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 311.0
offset_right = 403.0
offset_bottom = 383.0
text = "Average:"
label_settings = ExtResource("1_8j36e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Input" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 112.0
offset_right = 300.0
offset_bottom = 189.0
theme = ExtResource("2_uhlh0")

[node name="Input2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 310.0
offset_top = 111.0
offset_right = 583.0
offset_bottom = 188.0
theme = ExtResource("2_uhlh0")

[node name="Input3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 595.0
offset_top = 112.0
offset_right = 858.0
offset_bottom = 189.0
theme = ExtResource("2_uhlh0")

[node name="Input4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 869.0
offset_top = 112.0
offset_right = 1139.0
offset_bottom = 189.0
theme = ExtResource("2_uhlh0")

[node name="Calculate" type="Button" parent="."]
layout_mode = 0
offset_left = 165.0
offset_top = 477.0
offset_right = 338.0
offset_bottom = 550.0
theme = ExtResource("2_uhlh0")
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 461.0
offset_top = 478.0
offset_right = 634.0
offset_bottom = 551.0
theme = ExtResource("2_uhlh0")
text = "Clear"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 779.0
offset_top = 475.0
offset_right = 952.0
offset_bottom = 548.0
theme = ExtResource("2_uhlh0")
text = "Exit"

[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
